--- a/style.css
+++ b/style.css
@@ -298,7 +298,7 @@ img {
 /* FROM CODEPEN */
 
 .slider {
-  background: url(http://bst.seasiderspodcast.co.uk/wp-content/uploads/2015/06/bloomfieldroad1800-926.jpg);
+  background: url(/wp-content/uploads/2015/06/bloomfieldroad1800-926.jpg);
   padding-bottom: 20px;
 }
 
@@ -469,6 +469,10 @@ aside.widget:nth-child(even)  {
 	padding-left: 12px;
 	font-size: 18px;
 }
+.bst-partners .row {
+	background: white;
+	margin: 0 20px 20px 20px;
+}
 .main-navigation {
 	max-width: none;
 }
@@ -499,4 +503,29 @@ footer aside .widget {
 .paging-navigation {
 	background: #DBBFA5;
 	margin-bottom: 0;
+	padding: 30px 0 30px 0;
+}
+.nav-previous .meta-nav, .nav-next .meta-nav {
+	padding: 0!important;
+	width: 42px!important;
+}
+.paging-navigation .nav-next {
+	padding: 0;
+}
+.partners-head {
+	text-transform: uppercase;
+	font-size: 28px;
+}
+.bst-partners img {
+	padding: 20px;
+}
+.bst-partners div {
+	text-align: center;
+}
+.member-benefits {
+	color: rgba(247, 132, 31, 1);
+	text-transform: uppercase;
+}
+.bst-partners h3 {
+	margin-bottom: 4px;
 }
