--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ h1.entry-title {
 	  letter-spacing: 0px;
 	}	
 }
-.header-meta a.join {
+.header-meta a.join, .header-meta a.login {
 	float: right;
 	padding: 8px 16px;
 	border: 1px solid rgb(255, 193, 81);
@@ -220,7 +220,10 @@ h1.entry-title {
 	margin: 6px 0;
 	letter-spacing: 2px;
 }
-.header-meta a.join:hover {
+.header-meta a.join {
+	margin-right: 10px;
+}
+.header-meta a.join:hover, .header-meta a.login:hover  {
 	text-decoration: none;
 	background: rgb(255, 193, 81);
 	color: white;
@@ -529,3 +532,7 @@ footer aside .widget {
 .bst-partners h3 {
 	margin-bottom: 4px;
 }
+.entry-title {
+	
+}
+
