--- a/css/bst.scss
+++ b/css/bst.scss
@@ -237,6 +237,14 @@ footer aside .widget {
 #primary {
 	overflow: hidden;
 }
+#category {
+	.site-content {
+		margin: 0;
+	}
+	.archive-title {
+		max-width: 100%;
+	}
+}
 
 /* CLEAR FIX.  Just add .group to parent off floats you want to clear */
 .group:before,
