--- a/css/bst.css
+++ b/css/bst.css
@@ -10,14 +10,14 @@
 .tertiary {
   background-color: #FFDCBE; }
 
-.cta, #pricing-table .mepr-price-box-button a, .introBlock a, .quotes a {
+.cta, #pricing-table .mepr-price-menu .mepr-price-box-button a, .introBlock a, .quotes a {
   background-color: #b93207; }
 
 .boxed, .internal-page section {
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.3); }
 
 /* HEADER */
-.cta, #pricing-table .mepr-price-box-button a, .introBlock a, .quotes a {
+.cta, #pricing-table .mepr-price-menu .mepr-price-box-button a, .introBlock a, .quotes a {
   background: linear-gradient(to bottom, #e05d22 0%, #d94412 100%);
   border: none;
   border-bottom: 3px solid #b93207;
@@ -27,7 +27,7 @@
   padding: 11px 24px 10px;
   text-decoration: none;
   font-size: 18px; }
-  .cta:hover, #pricing-table .mepr-price-box-button a:hover, .introBlock a:hover, .quotes a:hover {
+  .cta:hover, #pricing-table .mepr-price-menu .mepr-price-box-button a:hover, .introBlock a:hover, .quotes a:hover {
     background: #b93207; }
 
 .navbar {
@@ -108,6 +108,13 @@ h1.entry-title {
     background: #ffc151;
     color: white; }
 
+.home-news h2 {
+  margin: 0;
+  background: #707070;
+  color: white;
+  text-align: center;
+  padding: 10px 0; }
+
 .news .article {
   padding: 0; }
 
@@ -143,7 +150,7 @@ h1.entry-title {
   margin: 0; }
 
 .quotes {
-  background: #FFDCBE;
+  background: #fbc89a;
   padding: 20px;
   text-align: center;
   overflow: hidden; }
@@ -168,8 +175,8 @@ h1.entry-title {
 .membership .inner-content {
   width: 100% !important;
   float: none; }
-.membership .mp_wrapper {
-  width: 100% !important; }
+.membership .mp_wrapper .mp-form-row {
+  width: 40%; }
 
 .join .inner-content {
   width: 100% !important; }
@@ -183,38 +190,44 @@ h1.entry-title {
     text-align: center; }
 
 #my-account .inner {
-  width: 70%;
   margin: 0 auto; }
   @media (min-width: 0) and (max-width: 768px) {
     #my-account .inner {
       width: 100%; } }
 #my-account #mepr_account_form {
-  width: 70%;
+  width: 60%;
   margin: 0 auto; }
   @media (min-width: 0) and (max-width: 768px) {
     #my-account #mepr_account_form {
       width: 90%; } }
+#my-account .mepr-login-form-wrap {
+  width: 30%;
+  text-align: center;
+  margin: 0 auto; }
+  @media (min-width: 0) and (max-width: 768px) {
+    #my-account .mepr-login-form-wrap {
+      width: 80%; } }
 
-#pricing-table {
+#pricing-table .mepr-price-menu {
   text-align: center;
   margin-bottom: 40px; }
-  #pricing-table .mepr-price-box-benefits-list div:nth-child(odd) {
+  #pricing-table .mepr-price-menu .mepr-price-box-benefits-list div:nth-child(odd) {
     background: #fcd5b3; }
-  #pricing-table .mepr-price-box {
+  #pricing-table .mepr-price-menu .mepr-price-box {
     background: #fef0e4;
     padding: 0;
     margin-bottom: 20px;
     width: 22%;
     margin-right: 24px; }
     @media (min-width: 0) and (max-width: 768px) {
-      #pricing-table .mepr-price-box {
+      #pricing-table .mepr-price-menu .mepr-price-box {
         width: 100%; } }
-    #pricing-table .mepr-price-box:last-child {
+    #pricing-table .mepr-price-menu .mepr-price-box:last-child {
       margin-right: 0; }
-  #pricing-table .mepr-price-box-benefits-item {
+  #pricing-table .mepr-price-menu .mepr-price-box-benefits-item {
     border-bottom: none;
     font-weight: normal; }
-  #pricing-table .mepr-price-box-price {
+  #pricing-table .mepr-price-menu .mepr-price-box-price {
     font-size: 24px;
     font-weight: normal;
     margin-top: 0; }
@@ -353,8 +366,12 @@ aside.widget:nth-child(even) {
   height: 15px;
   display: block; }
 
-.content-area {
-  padding-top: 40px; }
+.quoteHead {
+  background: #aa550b !important;
+  margin: 0;
+  color: white;
+  text-align: center;
+  font-size: 1px; }
 
 .home-news {
   background: #eaeaea; }
