--- a/css/bst.scss
+++ b/css/bst.scss
@@ -7,6 +7,8 @@ $tangerine: rgba(247, 132, 31, 1);
 $secondary: #aa550b; /* browny, */
 $tertiary: lighten(#f7841f, 25%); /* light orange, quotes */
 $greyBG: #eaeaea;
+$fontSize: 19px;
+
 
 
 .primary { background-color: rgba(247, 132, 31, 1);}
@@ -15,6 +17,8 @@ $greyBG: #eaeaea;
 .cta {background-color: #b93207;}
 
 .boxed {box-shadow: 0 0 3px rgba(0,0,0,.3);}
+
+
 
 @import "sass/_mq.scss";
 @import "sass/_header.scss";
@@ -39,7 +43,9 @@ $greyBG: #eaeaea;
 .news {
 	position: relative;
 }
-
+.widget {
+	font-size: 18px;
+}
 .masonry .site-content {
 	margin: 0;
 }
@@ -76,8 +82,6 @@ img {
 .internal-page {
 	background: white;
 }
-
-
 .navbar {
 	margin: 0 auto;
 	max-width: 1600px;
@@ -106,9 +110,6 @@ img {
 .widget ul {
   list-style-type: square;
   margin-left: 12px;	
-}
-.archive #content {
-	background: rgba(219, 191, 165, 1);
 }
 .archive .content-area, .search .content-area {
 	padding-top: 0;
@@ -154,7 +155,10 @@ img {
 .the-date {
 	color: #999;
 	padding-left: 12px;
-	font-size: 18px;
+	font-size: $fontSize;
+}
+.single, .page {
+	p, a, li { font-size: $fontSize;}
 }
 .main-navigation {
 	max-width: none;
@@ -256,4 +260,8 @@ footer aside .widget {
 }
 .group {
     zoom: 1; /* For IE 6/7 (trigger hasLayout) */
+}
+
+.internal-page section {
+	margin-bottom: 40px;
 }
